--- a/libs.gradle
+++ b/libs.gradle
@@ -24,6 +24,7 @@ ext {
     nav_version = "1.0.0-alpha05"
     retrofit_version = '2.2.0'
     ok_http_version = '3.6.0'
+    gson_version = '2.8.5'
 
     appDependencies = [
             multidex                    : "com.android.support:multidex:$mutlidex_version",
@@ -75,7 +76,8 @@ ext {
     networkDependencies = [
             retrofit                    : "com.squareup.retrofit2:retrofit:$retrofit_version",
             retrofitRx                  : "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version",
-            gson                        : "com.squareup.retrofit2:converter-gson:$retrofit_version",
+            gsonConverter               : "com.squareup.retrofit2:converter-gson:$retrofit_version",
+            gson                        : "com.google.code.gson:gson:$gson_version",
             okhttp                      : "com.squareup.okhttp3:okhttp:$ok_http_version",
             interceptor                 : "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
     ]
